# ai-food-waste-coach

./: README.md  agent.py  app.py  data_handler.py  impact_calculator.py  meal_planner.py  nutrition_storage_dataset.csv  pyproject.toml  recipe_engine.py  requirement.txt  routes.py  smart_features.py
static/css/: style.css
static/js/: app.js
templates/: index.html
