[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-session>=0.8.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "fuzzywuzzy>=0.18.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-levenshtein>=0.27.1",
    "flask-cors>=6.0.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]
